--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ author:
   zhihu            :# "https://www.zhihu.com/people/64-50-44-44"
   semantic         : # URL
   ssrn             : # URL
-  bilibili         : "https://space.bilibili.com/208704116?spm_id_from=333.1007.0.0"
+ pubmed            : #"https://space.bilibili.com/208704116?spm_id_from=333.1007.0.0"
   researchgate     : # URL
   scopus           : # URL
   zotero           : # URL
