--- a/_config.yml
+++ b/_config.yml
@@ -35,13 +35,13 @@ author:
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # URL
   inspire-hep      : # URL
   impactstory      : # URL
-  zhihu            :# "https://www.zhihu.com/people/64-50-44-44"
+  orcid            : # URL
   semantic         : # URL
   ssrn             : # URL
- pubmed            : #"https://space.bilibili.com/208704116?spm_id_from=333.1007.0.0"
+  pubmed           : # URL
   researchgate     : # URL
   scopus           : # URL
   zotero           : # URL
