--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author:
   wikipedia        : # Username
   xing             : # Username
   youtube          : # Username
-  zhihu            : "/people/64-50-44-44"
+  zhihu            : "64-50-44-44"
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
   books:
