--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   bio              : "First year undergraduate majoring French"
   location         : "Shanghai"
   employer         : "Shanghai Jiaotong University"
-  uri              : https://github.com/shushuyang231
+  uri              : https://space.bilibili.com/208704116
   email            : "dir2354@163.com" 
 
   # Academic websites
